@@ -12,7 +12,7 @@
 ##############################################################################
 """ Customizable controlled python scripts that come from the filesystem.
 
-$Id: FSControllerPythonScript.py,v 1.6 2003/10/24 18:40:56 plonista Exp $
+$Id: FSControllerPythonScript.py,v 1.7 2003/10/25 22:29:09 plonista Exp $
 """
 
 import re
@@ -65,7 +65,19 @@ class FSControllerPythonScript (BaseClass, ControllerBase):
         controller_state = controller.getState(self, is_validator=0)
         controller_state = self.getButton(controller_state, REQUEST)
         validators = self.getValidators(controller_state, REQUEST).getValidators()
-        controller_state = controller.validate(controller_state, REQUEST, validators)
+
+        # put all arguments into a dict
+        c = self.func_code
+        param_names = c.co_varnames[:c.co_argcount]
+        argdict = {}
+        index = 0
+        # grab the names for positional arguments out of the function code
+        for a in args:
+            argdict[param_names[index]] = a
+            index += 1
+        argdict.update(kwargs)
+        
+        controller_state = controller.validate(controller_state, REQUEST, validators, argdict)
 
         if controller_state.getStatus() == 'success':
             result = FSControllerPythonScript.inheritedAttribute('__call__')(self, *args, **kwargs)
